refactor: remove legacy v3 tailwind.config.ts (#84)

--- a/core/assets/css/ignis-nuxt-ui.css
+++ b/core/assets/css/ignis-nuxt-ui.css
@@ -17,3 +17,8 @@
   // css rules here
 }
 */
+
+/* 
+// Tailwind v3 config file can be referenced like this for legacy reasons
+@config "./path/to/tailwind.config.ts";
+*/
