--- a/core/assets/css/ignis-tailwind.css
+++ b/core/assets/css/ignis-tailwind.css
@@ -16,3 +16,8 @@
   // css rules here
 }
 */
+
+/* 
+// Tailwind v3 config file can be referenced like this for legacy reasons
+@config "./path/to/tailwind.config.ts";
+*/
