refactor: unify internal component names

--- a/core/assets/css/ignis-open-props.css
+++ b/core/assets/css/ignis-open-props.css
@@ -8,7 +8,7 @@
 @import "open-props/normalize";
 @import "open-props/buttons";
 
-/* demo class - used in AppFeature component instance */
+/* demo class - used in IgnisFeature component instance */
 .openprops-feature {
 
   /* https://open-props.style/#gradients */
